# insightdesk-ai

./: LICENSE  README.md
insightdesk-ai/: pyproject.toml
insightdesk-ai/src/insightdesk_ai/: __init__.py  schemas.py  settings.py
